# acorn

./: .ackrc  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  ROADMAP.md  SIMPLIFICATION.md
.claude/: settings.json
.github/workflows/: release-windows.yml  run-tests.yml
python/: README.md
scripts/: byte_change.sh  release.sh
src/: acorn_type.rs  acorn_value.rs  active_set.rs  atom.rs  binding_map.rs  block.rs  build_cache.rs  builder.rs  certificate.rs  checker.rs  clause.rs  clause_set.rs  cleaner.rs  cnf.rs  code_generator.rs  compilation.rs  display.rs  doc_generator.rs  environment.rs  evaluator.rs  expression.rs  extended_term.rs  fact.rs  flat.rs  generalization_set.rs  goal.rs  goal_context.rs  interfaces.rs  lib.rs  literal.rs  manifest.rs  maybe_owned.rs  module.rs  module_cache.rs  module_cache_set.rs  monomorphizer.rs  named_entity.rs  names.rs  new_pattern_tree.rs  node.rs  (+31 more)
src/elaborator/: acorn_type.rs  acorn_value.rs  add_statement.rs  binding_map.rs  block.rs  environment.rs  error.rs  evaluator.rs  fact.rs  goal.rs  mod.rs  named_entity.rs  names.rs  node.rs  potential_value.rs  proposition.rs  source.rs  stack.rs  synthetic.rs  termination_checker.rs  type_unifier.rs  unresolved_constant.rs
src/environment/: add_statement.rs  env_base.rs  mod.rs
src/generative/: generative_model.rs  generative_prover.rs  goal_context.rs  mod.rs  tactics_model.rs  training_data_writer.rs
src/kernel/: aliases.rs  atom.rs  clause.rs  closed_type.rs  cnf.rs  concrete_proof.rs  context.rs  display.rs  equality_graph.rs  extended_term.rs  fat_clause.rs  fat_literal.rs  fat_term.rs  fingerprint.rs  generalization_set.rs  hybrid_fingerprint.rs  inference.rs  kernel_context.rs  literal.rs  local_context.rs  mod.rs  new_fingerprint.rs  new_term_graph.rs  old_fingerprint.rs  pattern_tree.rs  pdt.rs  symbol.rs  symbol_table.rs  term.rs  term_graph.rs  thin_clause.rs  thin_literal.rs  thin_term.rs  trace.rs  type_store.rs  types.rs  unifier.rs  variable_map.rs
src/prover/: active_set.rs  dataset.rs  features.rs  mod.rs  ort_model.rs  passive_set.rs  proof.rs  prover.rs  rewrite_tree.rs  score.rs  scorer.rs  scoring_model.rs
src/pts/: flat.rs
src/saturation/: active_set.rs  fingerprint.rs  mod.rs  new_fingerprint.rs  passive_set.rs  proof.rs  prover.rs  rewrite_tree.rs  saturation_prover.rs  score.rs  scorer.rs  scoring_model.rs
src/server/: mod.rs  project_manager.rs  search_manager.rs
src/syntax/: expression.rs  mod.rs  statement.rs  token.rs  token_map.rs
src/tests/: common.rs  env_attributes_test.rs  env_functions_test.rs  env_misc_test.rs  mod.rs  (+15 more)
vscode/: interfaces.d.ts
(+16 files in other folders)
