[package]
name = "acorn"
version = "0.1.7"
edition = "2021"
default-run = "acorn"

[dependencies]
async-trait = "0.1"
blake3 = "1.5"
chrono = "0.4.31"
clap = { version = "4.5.17", features = ["derive"] }
color-backtrace = "0.7.0"
dashmap = "5.5.3"
fxhash = "0.2.1"
im = "15.1.0"
indoc = "1.0.8"
mimalloc = "0.1"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
nohash-hasher = "0.2.0"
ordered-float = "4.2.2"
ort = "=2.0.0-rc.9"
pretty = "0.12.3"
qp-trie = "0.8.2"
regex = "1.11.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tempfile = "3.17.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.12"
tower-lsp = "0.20.0"
walkdir = "2.4.0"

[dev-dependencies]
assert_fs = "1.1.2"

[lib]
doctest = false

[[bin]]
name = "acorn"
test = false

[[bin]]
name = "profile_prover"
test = false

[[bin]]
name = "profile_scorer"
test = false

[[bin]]
name = "profile_verifier"
test = false

# Fast, but including debug info.
[profile.fastdev]
inherits = "release"
debug = true